draft: nvfortran-only fast public-API benchmarks

--- a/draft/gpu_spline_1d_many/CMakeLists.txt
+++ b/draft/gpu_spline_1d_many/CMakeLists.txt
@@ -13,10 +13,8 @@ set(LIBNEO_ROOT ${DRAFT_ROOT}/../..)
 
 if(CMAKE_Fortran_COMPILER_ID STREQUAL "NVHPC")
     set(DRAFT_FORTRAN_IS_NVHPC TRUE)
-elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
-    set(DRAFT_FORTRAN_IS_GNU TRUE)
 else()
-    message(FATAL_ERROR "Unsupported Fortran compiler: ${CMAKE_Fortran_COMPILER_ID}")
+    message(FATAL_ERROR "Draft benchmark supports NVHPC nvfortran only (got: ${CMAKE_Fortran_COMPILER_ID})")
 endif()
 
 set(DRAFT_COMMON_FFLAGS -O3)
@@ -24,8 +22,6 @@ set(DRAFT_COMMON_FFLAGS -O3)
 set(DRAFT_PREPROCESS_FFLAGS "")
 if(DRAFT_FORTRAN_IS_NVHPC)
     list(APPEND DRAFT_PREPROCESS_FFLAGS -Mpreprocess)
-elseif(DRAFT_FORTRAN_IS_GNU)
-    list(APPEND DRAFT_PREPROCESS_FFLAGS -cpp)
 endif()
 
 set(DRAFT_OPENACC_FFLAGS "")
@@ -35,15 +31,6 @@ if(DRAFT_ENABLE_OPENACC)
         list(APPEND DRAFT_OPENACC_FFLAGS -acc -Minfo=accel)
         list(APPEND DRAFT_OPENACC_LDFLAGS -acc)
         list(APPEND DRAFT_OPENACC_LDFLAGS -gpu=ccnative)
-    elseif(DRAFT_FORTRAN_IS_GNU)
-        list(APPEND DRAFT_OPENACC_FFLAGS -fopenacc)
-        list(APPEND DRAFT_OPENACC_LDFLAGS -fopenacc)
-        if(DRAFT_OPENACC_OFFLOAD STREQUAL "nvptx")
-            list(APPEND DRAFT_OPENACC_FFLAGS -foffload=nvptx-none)
-            list(APPEND DRAFT_OPENACC_LDFLAGS -foffload=nvptx-none)
-        elseif(NOT DRAFT_OPENACC_OFFLOAD STREQUAL "none")
-            message(FATAL_ERROR "Invalid DRAFT_OPENACC_OFFLOAD='${DRAFT_OPENACC_OFFLOAD}' (expected none|nvptx)")
-        endif()
     endif()
 endif()
 
