GPU spline many-point API + OpenACC (benchmarks in bench/spline_many) (#200)
This PR adds a many-point (batch over points) spline evaluation API for
`BatchSplineData{1D,2D,3D}` and OpenACC paths (implicit-transfer
convenience + resident variants).

## Production (`src/interpolate/`)
- New APIs:
  - 1D: `evaluate_batch_splines_1d_many(spl, x(:), y(:, :))`
  - 2D: `evaluate_batch_splines_2d_many(spl, x(2, :), y(:, :))`
  - 3D: `evaluate_batch_splines_3d_many(spl, x(3, :), y(:, :))`
- Resident variants (caller-managed data lifetime):
  - `evaluate_batch_splines_{1,2,3}d_many_resident`
- OpenACC builds: constructors do `!$acc enter data
copyin(spl%coeff(...))` so `*_many` can offload without extra setup.
- Periodic scalar wrapping fix for nonzero `x_min`:
  - `xj = modulo(x - x_min, period) + x_min`

## Tests
- `test_batch_interpolate_many` covers both OpenACC offload and CPU
fallback branches (by deleting device data and re-evaluating).
- `test_boozer_class` / `test_efit_class` no longer write artifacts into
`test/source` (outputs go to `/tmp`).

## Benchmarks
- Location: `bench/spline_many/`
- Runner: `./bench/spline_many/run_benchmarks.sh`
- Fast mode (< 1 min, nvfortran-only): `LIBNEO_BENCH_FAST=1
./bench/spline_many/run_benchmarks.sh`
- Device selection at runtime: `ACC_DEVICE_TYPE=host|nvidia`

--- a/src/interpolate/CMakeLists.txt
+++ b/src/interpolate/CMakeLists.txt
@@ -1,11 +1,16 @@
 add_library(interpolate STATIC
     ../spl_three_to_five.f90
+    acc_spline_build_order5.f90
     batch_interpolate_types.f90
     batch_interpolate_1d.f90
     batch_interpolate_2d.f90
     batch_interpolate_3d.f90
     batch_interpolate.f90
     interpolate.f90)
+
+if(LIBNEO_BUILD_TESTING)
+    target_compile_definitions(interpolate PRIVATE LIBNEO_ENABLE_SPLINE_ORACLE=1)
+endif()
 
 set_property(TARGET interpolate PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
