Add automatic dependency fetching with ABI smoke tests
Implement compiler-independent detection of external dependencies
(HDF5, NetCDF-Fortran, FFTW) with automatic fallback to building
from source when system libraries are incompatible.

Key features:
- Smoke test using try_compile to verify ABI compatibility
- Automatic detection of NVHPC/PGI compilers (always fetch)
- Modular cmake structure (DetectDependencies.cmake)
- FetchContent fallback for HDF5, NetCDF-C/Fortran, FFTW

New cmake options:
- PREFER_SYSTEM_LIBS: Try system libraries first (default ON)
- FORCE_FETCH_DEPS: Always build from source (default OFF)

Fixes #205

--- a/src/hdf5_tools/CMakeLists.txt
+++ b/src/hdf5_tools/CMakeLists.txt
@@ -12,8 +12,10 @@ elseif (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
   set(CMAKE_Fortran_FLAGS "-O2 -cpp -mkl -stand f08")
 endif ()
 
-### Find HDF5
-find_package(HDF5 COMPONENTS C HL Fortran Fortran_HL REQUIRED)
+### Find HDF5 (skip if already provided by parent via FetchContent)
+if(NOT TARGET hdf5::hdf5_fortran)
+    find_package(HDF5 COMPONENTS C HL Fortran Fortran_HL REQUIRED)
+endif()
 
 add_library(hdf5_tools STATIC
   hdf5_tools.F90
