--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -80,14 +80,7 @@ target_link_libraries(standardise_geqdsk.x magfie)
 add_executable(vacfield.x src/magfie/vacfield.f90)
 add_executable(coil_convert.x src/magfie/coil_convert.f90)
 
-# Find FFTW
-find_package(FFTW REQUIRED)
-
-if(FFTW_FOUND)
-    message(STATUS "Found FFTW")
-else()
-    message(FATAL_ERROR "FFTW not found")
-endif()
+# FFTW is detected in cmake/DetectDependencies.cmake
 
 # Assumes previous include of hdf5_tools/CMakeLists.txt for find_package
 set(hdf5_tools_include_dir ${CMAKE_BINARY_DIR})
