Improve auto-fetch dependencies with HDF5 Fortran C stubs
- Add BuildExternalDependencies.cmake with HDF5 f90cstub libraries
- Add -fPIC for static libs that link into Python shared modules
- Add zlib/dl/m dependencies for HDF5 static linking
- Support NetCDF imported targets in magfie
- Add gfortran support for OpenACC benchmarks
- Remove old separate Fetch*.cmake files (consolidated)

Tested with gfortran 16 - all 63 tests pass on host.

--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -56,9 +56,16 @@ target_link_libraries(neo PUBLIC
 target_link_libraries(neo PRIVATE
   BLAS::BLAS
   LAPACK::LAPACK
-  netcdf
-  netcdff
 )
+
+# Link NetCDF - use built targets if available, otherwise system libraries
+if(TARGET netcdf::netcdff)
+    target_link_libraries(neo PRIVATE netcdf::netcdff)
+elseif(TARGET netcdf::netcdf)
+    target_link_libraries(neo PRIVATE netcdf::netcdf netcdff)
+else()
+    target_link_libraries(neo PRIVATE netcdf netcdff)
+endif()
 
 add_library(LIBNEO::neo ALIAS neo)
 set_target_properties(neo PROPERTIES
