--- a/bench/spline_many/CMakeLists.txt
+++ b/bench/spline_many/CMakeLists.txt
@@ -11,8 +11,12 @@ set(LIBNEO_ROOT ${BENCH_ROOT}/../..)
 
 if(CMAKE_Fortran_COMPILER_ID STREQUAL "NVHPC")
     set(BENCH_FORTRAN_IS_NVHPC TRUE)
+    set(BENCH_FORTRAN_IS_GNU FALSE)
+elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
+    set(BENCH_FORTRAN_IS_NVHPC FALSE)
+    set(BENCH_FORTRAN_IS_GNU TRUE)
 else()
-    message(FATAL_ERROR "Benchmarks support NVHPC nvfortran only (got: ${CMAKE_Fortran_COMPILER_ID})")
+    message(FATAL_ERROR "Benchmarks support NVHPC or GNU gfortran only (got: ${CMAKE_Fortran_COMPILER_ID})")
 endif()
 
 set(BENCH_COMMON_FFLAGS -O3)
@@ -20,6 +24,8 @@ set(BENCH_COMMON_FFLAGS -O3)
 set(BENCH_PREPROCESS_FFLAGS "")
 if(BENCH_FORTRAN_IS_NVHPC)
     list(APPEND BENCH_PREPROCESS_FFLAGS -Mpreprocess)
+elseif(BENCH_FORTRAN_IS_GNU)
+    list(APPEND BENCH_PREPROCESS_FFLAGS -cpp)
 endif()
 
 set(BENCH_OPENACC_FFLAGS "")
@@ -29,6 +35,9 @@ if(BENCH_ENABLE_OPENACC)
         list(APPEND BENCH_OPENACC_FFLAGS -acc -Minfo=accel)
         list(APPEND BENCH_OPENACC_LDFLAGS -acc)
         list(APPEND BENCH_OPENACC_LDFLAGS -gpu=ccnative)
+    elseif(BENCH_FORTRAN_IS_GNU)
+        list(APPEND BENCH_OPENACC_FFLAGS -fopenacc -foffload=nvptx-none)
+        list(APPEND BENCH_OPENACC_LDFLAGS -fopenacc -foffload=nvptx-none)
     endif()
 endif()
 
