Add NVHPC/nvfortran build support with auto CUDA detection
- Add cmake/SetupNVHPCCuda.cmake to auto-detect CUDA at /opt/cuda or
  /usr/local/cuda and set NVHPC_CUDA_HOME environment variable
- Add Makefile targets: nvfortran, test-nvfortran, clean-nvfortran
- Update CLAUDE.md with complete NVHPC setup documentation
- Document that stub mpifort at comm_libs/hpcx/bin has strict CUDA
  version checks; use full HPC-X at comm_libs/13.0/hpcx/latest instead
- Auto-detect NVHPC version from /opt/nvidia/hpc_sdk installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,11 @@ set(libneo_VERSION_MAJOR 2025)
 set(libneo_VERSION_MINOR 08)
 set(libneo_VERSION_PATCH 20)
 
+# Auto-detect CUDA for NVHPC compilers (must be before enable_language)
+# This sets NVHPC_CUDA_HOME and NVCOMPILER_COMM_LIBS_HOME environment variables
+# if NVHPC compiler is detected and CUDA is found at /opt/cuda or /usr/local/cuda
+include(${PROJECT_SOURCE_DIR}/cmake/SetupNVHPCCuda.cmake)
+
 enable_language(C Fortran)
 if(LIBNEO_BUILD_TESTING)
     include(CTest)
