--- a/src/interpolate/CMakeLists.txt
+++ b/src/interpolate/CMakeLists.txt
@@ -13,9 +13,10 @@ if(LIBNEO_BUILD_TESTING)
 endif()
 
 # Apply OpenACC to interpolate library only (avoids nvfortran bugs in other modules)
+# Link options must be INTERFACE so executables linking this library get -acc flag
 if(ENABLE_OPENACC AND CMAKE_Fortran_COMPILER_ID STREQUAL "NVHPC")
     target_compile_options(interpolate PRIVATE -acc -gpu=ccnative)
-    target_link_options(interpolate PRIVATE -acc -gpu=ccnative)
+    target_link_options(interpolate INTERFACE -acc -gpu=ccnative)
 endif()
 
 set_property(TARGET interpolate PROPERTY
