Fix duplicate symbol error with nvlink by using library linking
Change from $<TARGET_OBJECTS:interpolate> to linking interpolate
library directly. The previous approach caused duplicate symbols
when linking executables with OpenACC because:
- neo included interpolate objects via TARGET_OBJECTS
- neo_field also linked against interpolate library
- nvlink sees both and reports multiple definition errors

Using proper library linking lets CMake deduplicate dependencies.

--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -43,7 +43,7 @@ add_library(neo STATIC
 
 target_link_libraries(neo PUBLIC
     $<TARGET_OBJECTS:neo_polylag>
-    $<TARGET_OBJECTS:interpolate>
+    interpolate
     hdf5_tools
     neo_field
 )
