Unify spline evaluation: single-point routines as facades to _many
Refactor all single-point spline evaluation routines to call _many
backends with n=1. This creates a unified architecture where _many
is the single source of truth for evaluation logic.

Changes:
- Add _many versions for non-batch 1D/2D/3D spline evaluation
- Convert single-point routines to thin facades calling _many
- Move original implementations to test/source/spline_eval_reference.f90
- Add test_batch_eval_oracle to verify facades match reference
- Refactor batch splines: single-point facades call _many backends

The _many routines use the same d2y convention [11,12,13,22,23,33]
as the original single-point implementations.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -144,6 +144,11 @@ target_link_libraries(test_batch_interpolate_many.x ${COMMON_LIBS})
 add_executable(test_batch_interpolate_oracle.x source/test_batch_interpolate_oracle.f90)
 target_link_libraries(test_batch_interpolate_oracle.x ${COMMON_LIBS})
 
+add_executable(test_batch_eval_oracle.x
+    source/test_batch_eval_oracle.f90
+    source/spline_eval_reference.f90)
+target_link_libraries(test_batch_eval_oracle.x ${COMMON_LIBS})
+
 add_executable(test_vmec_modules.x source/test_vmec_modules.f90)
 target_link_libraries(test_vmec_modules.x neo)
 
@@ -185,6 +190,7 @@ add_test(NAME test_interpolate COMMAND test_interpolate.x)
 add_test(NAME test_batch_interpolate COMMAND test_batch_interpolate.x)
 add_test(NAME test_batch_interpolate_many COMMAND test_batch_interpolate_many.x)
 add_test(NAME test_batch_interpolate_oracle COMMAND test_batch_interpolate_oracle.x)
+add_test(NAME test_batch_eval_oracle COMMAND test_batch_eval_oracle.x)
 add_test(NAME test_collision_freqs COMMAND test_collision_freqs.x)
 add_test(NAME test_transport COMMAND test_transport.x)
 add_test(NAME test_vmec_modules COMMAND test_vmec_modules.x)
