--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -149,6 +149,12 @@ add_executable(test_batch_eval_oracle.x
     source/spline_eval_reference.f90)
 target_link_libraries(test_batch_eval_oracle.x ${COMMON_LIBS})
 
+add_executable(benchmark_spline_performance.x source/benchmark_spline_performance.f90)
+target_link_libraries(benchmark_spline_performance.x ${COMMON_LIBS})
+
+add_executable(test_spline_performance.x source/test_spline_performance.f90)
+target_link_libraries(test_spline_performance.x ${COMMON_LIBS})
+
 add_executable(test_vmec_modules.x source/test_vmec_modules.f90)
 target_link_libraries(test_vmec_modules.x neo)
 
@@ -191,6 +197,7 @@ add_test(NAME test_batch_interpolate COMMAND test_batch_interpolate.x)
 add_test(NAME test_batch_interpolate_many COMMAND test_batch_interpolate_many.x)
 add_test(NAME test_batch_interpolate_oracle COMMAND test_batch_interpolate_oracle.x)
 add_test(NAME test_batch_eval_oracle COMMAND test_batch_eval_oracle.x)
+add_test(NAME test_spline_performance COMMAND test_spline_performance.x)
 add_test(NAME test_collision_freqs COMMAND test_collision_freqs.x)
 add_test(NAME test_transport COMMAND test_transport.x)
 add_test(NAME test_vmec_modules COMMAND test_vmec_modules.x)
