Fix fpm compatibility: enable preprocessing and remove duplicate modules
- Rename batch_interpolate_*.f90 to .F90 to enable preprocessing for
  OpenACC guards
- Add openacc_stubs.f90 for builds without OpenACC support
- Add [preprocess.cpp] section to fpm.toml for .F90 files
- Remove obsolete submodule files (libneo_coordinates_vmec.f90 etc)
  that duplicated content from libneo_coordinates_merged.f90
- Remove obsolete parent module file libneo_coordinates.f90 that was
  superseded by libneo_coordinates_merged.f90

This fixes fpm build errors caused by:
1. Multiple module definitions with same name (libneo_coordinates)
2. Missing openacc module when building without OpenACC

--- a/fpm.toml
+++ b/fpm.toml
@@ -25,3 +25,7 @@ library = true
 implicit-typing = true
 implicit-external = true
 source-form = "free"
+
+[preprocess]
+[preprocess.cpp]
+suffixes = ["F90"]
