CI: constrain NumPy for dev tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install Python dependencies for tests
         run: |
-          pip install --break-system-packages ".[dev]"
+          pip install --break-system-packages -c constraints/ci-python.txt ".[dev]"
 
       - name: Test
         run: |
