Export batch spline many-point derivative evaluation routines (#219)
## Summary

Export existing but unexported batch spline many-point derivative
evaluation routines.

## Changes

Add public exports for:
- `evaluate_batch_splines_1d_many_der`
- `evaluate_batch_splines_1d_many_der2`
- `evaluate_batch_splines_1d_many_der3`
- `evaluate_batch_splines_3d_many_der`
- `evaluate_batch_splines_3d_many_der2`

These routines were implemented in the internal modules but not
accessible through the public API via `batch_interpolate` and
`interpolate` modules.

## Motivation

Needed for GPU-style SoA batched field evaluation in SIMPLE (see
itpplasma/SIMPLE#276).

## Test plan

- [x] All existing tests pass (62/62)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # See https://github.com/Forsti5/Fortran-Unit-Test-Basic/blob/main/.github/workflows/main.yml
 
-name: Build and test
+name: test
 
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install Python dependencies for tests
         run: |
-          pip install --break-system-packages ".[dev]"
+          pip install --break-system-packages -c constraints/ci-python.txt ".[dev]"
 
       - name: Test
         run: |
