--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -138,6 +138,9 @@ target_link_libraries(test_batch_interpolate.x ${COMMON_LIBS})
 add_executable(test_batch_interpolate_many.x source/test_batch_interpolate_many.f90)
 target_link_libraries(test_batch_interpolate_many.x ${COMMON_LIBS})
 
+add_executable(test_batch_interpolate_rmix.x source/test_batch_interpolate_rmix.f90)
+target_link_libraries(test_batch_interpolate_rmix.x ${COMMON_LIBS})
+
 add_executable(test_batch_interpolate_oracle.x source/test_batch_interpolate_oracle.f90)
 target_link_libraries(test_batch_interpolate_oracle.x ${COMMON_LIBS})
 
@@ -193,6 +196,7 @@ add_test(NAME test_util COMMAND test_util.x)
 add_test(NAME test_interpolate COMMAND test_interpolate.x)
 add_test(NAME test_batch_interpolate COMMAND test_batch_interpolate.x)
 add_test(NAME test_batch_interpolate_many COMMAND test_batch_interpolate_many.x)
+add_test(NAME test_batch_interpolate_rmix COMMAND test_batch_interpolate_rmix.x)
 add_test(NAME test_batch_interpolate_oracle COMMAND test_batch_interpolate_oracle.x)
 add_test(NAME test_batch_eval_oracle COMMAND test_batch_eval_oracle.x)
 add_test(NAME test_spline_performance COMMAND test_spline_performance.x)
