Add comprehensive tests for species, rng, and polylag_3 modules
New test files:
- test_species.f90: Tests for species initialization
  - Electron and deuterium species initialization
  - Physical constants validation against NIST values
  - Interaction type assignments (EE=2, EI=3, II=4)
  - Deuterium plasma multi-species setup

- test_rng.f90: Statistical tests for random number generation
  - Continuous mode: mean ~0, variance ~1, range [-sqrt(3), sqrt(3)]
  - Discrete mode: values +1 or -1, balanced distribution
  - Chi-squared test for uniform distribution

- test_polylag_3.f90: Tests for cubic Lagrange interpolation
  - Index finding (indef) for middle and boundary cases
  - 1D polynomial interpolation and derivative accuracy
  - Coefficient partition of unity property
  - 3D interpolation and partial derivatives

All 70 tests pass (3 new tests added).

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -135,6 +135,15 @@ target_link_libraries(test_plag_coeff.x ${COMMON_LIBS})
 add_executable(test_spl_three_to_five.x source/test_spl_three_to_five.f90)
 target_link_libraries(test_spl_three_to_five.x ${COMMON_LIBS})
 
+add_executable(test_species.x source/test_species.f90)
+target_link_libraries(test_species.x neo species)
+
+add_executable(test_rng.x source/test_rng.f90 ../src/MC/rng.f90)
+target_link_libraries(test_rng.x ${COMMON_LIBS})
+
+add_executable(test_polylag_3.x source/test_polylag_3.f90)
+target_link_libraries(test_polylag_3.x ${COMMON_LIBS} ${MAGFIE_LIB})
+
 add_executable(test_interpolate.x source/test_interpolate.f90)
 target_link_libraries(test_interpolate.x ${COMMON_LIBS})
 
@@ -201,6 +210,9 @@ add_test(NAME test_hdf5_tools COMMAND test_hdf5_tools.x)
 add_test(NAME test_util COMMAND test_util.x)
 add_test(NAME test_plag_coeff COMMAND test_plag_coeff.x)
 add_test(NAME test_spl_three_to_five COMMAND test_spl_three_to_five.x)
+add_test(NAME test_species COMMAND test_species.x)
+add_test(NAME test_rng COMMAND test_rng.x)
+add_test(NAME test_polylag_3 COMMAND test_polylag_3.x)
 add_test(NAME test_interpolate COMMAND test_interpolate.x)
 add_test(NAME test_batch_interpolate COMMAND test_batch_interpolate.x)
 add_test(NAME test_batch_interpolate_many COMMAND test_batch_interpolate_many.x)
