refactor: modularize libneo_coordinates with proper OOP architecture
Replace monolithic merged file with clean module hierarchy:

- libneo_coordinates_base.f90: abstract coordinate_system_t type
- libneo_coordinates_vmec.f90: VMEC coordinate system implementation
- libneo_coordinates_geoflux.f90: Geoflux coordinate system implementation
- libneo_coordinates_chartmap.f90: Chartmap coordinate system implementation
- libneo_coordinates_validator.f90: Chartmap file validation
- libneo_coordinates_file_detection.f90: Reference coordinate file detection
- libneo_coordinates.f90: Facade module re-exporting all public API

Also:
- Fix fpm.toml invalid dependency syntax (system libs via external-modules)
- Add bind.toml for fpm-bind Python binding generation
- Update CMakeSources.in for new modular structure

All 70 tests pass with both CMake and FPM builds.

--- a/fpm.toml
+++ b/fpm.toml
@@ -6,13 +6,15 @@ maintainer = "albert@tugraz.at"
 copyright = "Copyright 2025, Plasma Physics at TU Graz"
 
 [dependencies]
-openmp = "*"
-mpi = "*"
-hdf5 = "*"
-netcdf = "*"
+# System libraries (openmp, mpi, hdf5, netcdf) handled via compiler flags
 
 [build]
-external-modules = ["fftw3.f03"]
+external-modules = [
+    "fftw3", "fftw3.f03",
+    "netcdf", "hdf5", "h5lt",
+    "omp_lib", "mpi", "mpi_f08",
+    "openacc"
+]
 auto-executables = true
 auto-tests = true
 auto-examples = true
