--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -324,6 +324,18 @@ set_tests_properties(validate_vmec_map2disc_chartmap_boundary_python PROPERTIES
 )
 
 add_test(
+  NAME validate_vmec_map2disc_chartmap_boundary_python_offset0p01m
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/validate_vmec_map2disc_chartmap_boundary.py
+          --wout ${CMAKE_CURRENT_BINARY_DIR}/wout.nc
+          --chartmap ${CMAKE_CURRENT_BINARY_DIR}/wout_vmec_python_offset0p01m.chartmap.nc
+          --boundary-offset 0.01
+)
+set_tests_properties(validate_vmec_map2disc_chartmap_boundary_python_offset0p01m PROPERTIES
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_chartmap_python
+)
+
+add_test(
   NAME plot_vmec_map2disc_chartmap_boundary_python
   COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/plot_vmec_map2disc_chartmap_boundary.py
           --wout ${CMAKE_CURRENT_BINARY_DIR}/wout.nc
@@ -331,6 +343,19 @@ add_test(
           --out ${CMAKE_CURRENT_BINARY_DIR}/wout_vmec_python.chartmap_boundary.png
 )
 set_tests_properties(plot_vmec_map2disc_chartmap_boundary_python PROPERTIES
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_chartmap_python
+)
+
+add_test(
+  NAME plot_vmec_map2disc_chartmap_boundary_python_offset0p01m
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/plot_vmec_map2disc_chartmap_boundary.py
+          --wout ${CMAKE_CURRENT_BINARY_DIR}/wout.nc
+          --chartmap ${CMAKE_CURRENT_BINARY_DIR}/wout_vmec_python_offset0p01m.chartmap.nc
+          --out ${CMAKE_CURRENT_BINARY_DIR}/wout_vmec_python_offset0p01m.chartmap_boundary.png
+          --boundary-offset 0.01
+)
+set_tests_properties(plot_vmec_map2disc_chartmap_boundary_python_offset0p01m PROPERTIES
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
   DEPENDS setup_vmec_chartmap_python
 )
