CI: switch to GitHub-hosted runners (#246)
### **User description**
Switch CI off private self-hosted runners (currently down) to
GitHub-hosted runners.

Changes:
- `GNU` job now runs on `ubuntu-latest`, installs build prerequisites
via apt, and sets up Python 3.12.
- Installs NumPy before the CMake build so `find_package(Python ...
NumPy)` succeeds.
- Adds `h5py` to `.[dev]` since `tilted_coil_field_validation` imports
it.
- Dashboard/deploy jobs also run on `ubuntu-latest` and download the
correct `testboard` binary for the runner architecture.

Local evidence:
- `python -c "import h5py"` now succeeds after `pip install -e
".[dev]"`.


___

### **PR Type**
Enhancement, Tests


___

### **Description**
- Switch CI from self-hosted to GitHub-hosted runners (ubuntu-latest)

- Add system dependencies installation via apt for build prerequisites

- Install NumPy before CMake build for find_package(Python ... NumPy)
success

- Add h5py to dev dependencies and update pip invocations

- Support architecture-agnostic testboard binary download for dashboard
job


___

### Diagram Walkthrough


```mermaid
flowchart LR
  A["Self-hosted runners"] -->|"Switch to"| B["GitHub-hosted ubuntu-latest"]
  B -->|"Install via apt"| C["System dependencies"]
  C -->|"Install via pip"| D["Python dependencies"]
  D -->|"Build & test"| E["CI pipeline"]
  F["testboard binary"] -->|"Architecture detection"| G["aarch64 or x86_64"]
  G -->|"Download & symlink"| H["Dashboard generation"]
```



<details><summary><h3>File Walkthrough</h3></summary>

<table><thead><tr><th></th><th align="left">Relevant
files</th></tr></thead><tbody><tr><td><strong>Configuration
changes</strong></td><td><table>
<tr>
  <td>
    <details>
<summary><strong>main.yml</strong><dd><code>Migrate to GitHub-hosted
runners with dependencies</code>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
&nbsp; &nbsp; </dd></summary>
<hr>

.github/workflows/main.yml

<ul><li>Changed GNU, dashboard, and deploy jobs from self-hosted to
<br>ubuntu-lates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,14 @@ chartmap = [
     "trimesh",
 ]
 dev = [
-    "scipy",
-    "shapely",
-    "matplotlib",
-    "netCDF4",
-    "trimesh",
-    "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
+  "scipy",
+  "shapely",
+  "matplotlib",
+  "netCDF4",
+  "h5py",
+  "trimesh",
+  "pytest",
+  "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
 ]
 
 [project.scripts]
